# server

./: .cnb.yml  .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.enzh  README.md  README_ZH.md  compose.yaml
.cnb/: web_trigger.yml
.github/workflows/: docker.yml
bergamot/: Cargo.toml  build.rs
bergamot/src/: lib.rs
bergamot/translation/: CMakeLists.txt  translation.cpp  translation.h
server/: Cargo.toml
server/src/: endpoint.rs  main.rs  translation.rs
src/: endpoint.rs  main.rs  translation.rs
